# BaseSoaCpp

./: .gitignore  INSTALL  README.md  TODO
prj/: Doxyfile  common.cmake  cppcheck.sh
prj/main/: CMakeLists.txt
prj/test/: CMakeLists.txt
res/: README.md
res/priv/: config.ini
src/main/base/: Config.h  SocketServer.cpp  SocketServer.h  main.cpp
